; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-output.c_set_encoder_ids.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-output.c_set_encoder_ids.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ffmpeg_data = type { %struct.TYPE_6__, %struct.TYPE_5__* }
%struct.TYPE_6__ = type { i32, i32, i32, i32 }
%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ffmpeg_data*)* @set_encoder_ids to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_encoder_ids(%struct.ffmpeg_data* %0) #0 {
  %2 = alloca %struct.ffmpeg_data*, align 8
  store %struct.ffmpeg_data* %0, %struct.ffmpeg_data** %2, align 8
  %3 = load %struct.ffmpeg_data*, %struct.ffmpeg_data** %2, align 8
  %4 = getelementptr inbounds %struct.ffmpeg_data, %struct.ffmpeg_data* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 3
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.ffmpeg_data*, %struct.ffmpeg_data** %2, align 8
  %8 = getelementptr inbounds %struct.ffmpeg_data, %struct.ffmpeg_data* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 8
  %11 = call i8* @get_codec_id(i32 %6, i32 %10)
  %12 = load %struct.ffmpeg_data*, %struct.ffmpeg_data** %2, align 8
  %13 = getelementptr inbounds %struct.ffmpeg_data, %struct.ffmpeg_data* %12, i32 0, i32 1
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 1
  store i8* %11, i8** %17, align 8
  %18 = load %struct.ffmpeg_data*, %struct.ffmpeg_data** %2, align 8
  %19 = getelementptr inbounds %struct.ffmpeg_data, %struct.ffmpeg_data* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.ffmpeg_data*, %struct.ffmpeg_data** %2, align 8
  %23 = getelementptr inbounds %struct.ffmpeg_data, %struct.ffmpeg_data* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = call i8* @get_codec_id(i32 %21, i32 %25)
  %27 = load %struct.ffmpeg_data*, %struct.ffmpeg_data** %2, align 8
  %28 = getelementptr inbounds %struct.ffmpeg_data, %struct.ffmpeg_data* %27, i32 0, i32 1
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  store i8* %26, i8** %32, align 8
  ret void
}

declare dso_local i8* @get_codec_id(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
